<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/layout_top_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_heightPercent="8%h"
        android:background="@color/white_60"
        android:visibility="gone"
        android:orientation="horizontal"
        tools:visibility="visible">

        <Button
            android:id="@+id/btn_cancle_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="1dp"
            android:background="@drawable/video_fragment_top_cancle_selector"
            android:text="@string/edit_top_button_cancle"
            android:clickable="true"
            tools:text="取消"/>

        <TextView
            android:id="@+id/tv_check_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_top_textview_message"
            tools:text="已选中5项"/>

        <Button
            android:id="@+id/btn_all_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_margin="1dp"
            android:background="@drawable/bg_fill_blue"
            android:text="@string/edit_top_button_select_all"
            tools:text="全选"/>

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <Button
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="上传"
        android:visibility="gone" />

</com.zhy.android.percent.support.PercentLinearLayout>